[package]
name = "timetrustings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
humantime = "2.1.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.30"
